force-app/main/default/objects/TMG_Content_Viewed__c/TMG_Content_Viewed__c.object-meta.xml
<CustomObject>
    <label>TMG Content Viewed</label>
    <nameField>
        <label>TMG Videos/Coaching Notes Viewed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMG Contents Viewed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>