force-app/main/default/objects/TMG_Content_Viewed__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Contents Viewed</relationshipLabel>
    <relationshipName>TMG_Contents_Viewed</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>