force-app/main/default/objects/TMG_Content_Viewed__c/fields/Date_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Viewed__c</fullName>
    <label>Date Viewed</label>
    <type>Date</type>
</CustomField>