force-app/main/default/objects/TMG_Content_Viewed__c/fields/From_LU__c.field-meta.xml
<CustomField>
    <fullName>From_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TMG_Contents_Viewed</relationshipName>
    <type>Lookup</type>
</CustomField>