force-app/main/default/objects/TMG_Content_Viewed__c/fields/TMG_Coaching_Guide_Actual_File_Name__c.field-meta.xml
<CustomField>
    <fullName>TMG_Coaching_Guide_Actual_File_Name__c</fullName>
    <formula>TMG_Coaching_Guides__r.TMG_Coaching_Guide_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Coaching Guide Name</label>
    <type>Text</type>
</CustomField>