force-app/main/default/objects/TMG_Content_Viewed__c/fields/TMG_Coaching_Guides__c.field-meta.xml
<CustomField>
    <fullName>TMG_Coaching_Guides__c</fullName>
    <label>TMG Coaching Guide ID</label>
    <referenceTo>TMG_Coaching_Guide__c</referenceTo>
    <relationshipLabel>TMG Contents Viewed</relationshipLabel>
    <relationshipName>TMG_Contents_Viewed</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>