force-app/main/default/objects/TMG_Content_Viewed__c/fields/TMG_EA__c.field-meta.xml
<CustomField>
    <fullName>TMG_EA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMG EA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TMG_Contents_Viewed1</relationshipName>
    <type>Lookup</type>
</CustomField>