force-app/main/default/objects/TMG_Content_Viewed__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <type>TextArea</type>
</CustomField>