force-app/main/default/objects/TMG_Content_Viewed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>TMG_Coaching_Guide_Actual_File_Name__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Viewed__c</columns>
    <columns>Date_Viewed__c</columns>
    <columns>From_LU__c</columns>
    <columns>To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>